Make Eclipse distinctly less yellow.